--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
+    "start": "node app",
+    "start-live": "npx nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/programming-2020/js-2020/issues"
   },
-  "homepage": "https://github.com/programming-2020/js-2020#readme"
+  "homepage": "https://github.com/programming-2020/js-2020#readme",
+  "dependencies": {
+    "nodemon": "^2.0.6"
+  }
 }
