--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "nodemon": "npx nodemon app.js",
-    "start": "node app.js"
+    "nodemon-eslint": "npx nodemon app.js",
+    "start": "node app.js",
+    "lint": "npx eslint **/*.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +25,9 @@
   },
   "homepage": "https://github.com/programming-2020/js-2020#readme",
   "dependencies": {
-    "eslint": "^7.22.0",
     "nodemon": "^2.0.6"
+  },
+  "devDependencies": {
+    "eslint": "^7.25.0"
   }
 }
