--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "nodemon": "npx nodemon app.js",
-    "nodemon-eslint": "npx nodemon app.js && npx eslint **/*.js",
+    "run:nodemon": "npx nodemon app.js",
+    "nodemon-eslint": "npx eslint **/*.js --fix  && npx nodemon app.js",
     "start": "node app.js",
-    "lint": "npx eslint **/*.js"
+    "run:eslint": "npx eslint **/*.js"
   },
   "repository": {
     "type": "git",
